# alumy-linux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  alumy.c  build.sh  cmake_gen.sh  fifo.c  pool.c  rbtree.c  version.c
bcc/: CMakeLists.txt  bcc.c
bcd/: bcd.c
cmake/: linux_check.cmake
cmake/toolchain/: aarch64-linux-gnu.cmake  arm-buildroot-linux-musleabi-flags.cmake  arm-none-eabi.cmake  toolchain-flags.cmake
cmock/: CMakeLists.txt
crc/: crc16.c  crc32.c  crc8.c
cunit/: CMakeLists.txt
filter/: kalman.c
http/: restful.c
include/: alumy.h
include/alumy/: ascii.h  base.h  bcc.h  bcd.h  check.h  config.h  crc.h  diag.h  fifo.h  git_hash.h  log.h  math.h  mem.h  osal.h  pool.h  types.h  version.h
include/alumy/filter/: kalman.h
include/alumy/net/: slip.h
include/alumy/network/: ipv4.h  manager.h  tcp.h
include/alumy/network/wireless/: quality.h
include/alumy/sys/: process.h  user_grp.h
net/: slip.c
network/: CMakeLists.txt
network/wireless/: quality.c
osal/: CMakeLists.txt
osal/linux/: log.c
osal/linux/network/: manager.c  resolv.c
osal/linux/network/ftp/: ftp_curl.h  ftpdel.c  ftpput.c
osal/linux/sys/: process.c  user.c  user_grp.c
pclint/: LIN.BAT  co-gcc-include.lnt  lint_cmac.h  lint_cppmac.h
rootfs/x86_64/amd64/usr/local/include/: alumy.h
rootfs/x86_64/amd64/usr/local/include/alumy/: bank_card.h  bcd.h  fifo.h  filter.h  log.h  mem.h  sys.h
rootfs/x86_64/amd64/usr/local/include/alumy/http/: restful.h
rootfs/x86_64/amd64/usr/local/include/alumy/network/: ftp.h  manager.h  wireless.h
rootfs/x86_64/amd64/usr/local/include/alumy/osal/: network.h
rootfs/x86_64/amd64/usr/local/include/alumy/sys/: grp.h  user.h
rootfs/x86_64/amd64/usr/local/lib64/: libalumy.so.0  libalumy.so.0.0.1
se/: alumy.vpj  alumy.vpwhist  rootfs.vpj
source/: fifo.c  pool.c  release.md
source/base64/: base64.c
source/bcd/: bcd.c
source/card/: CMakeLists.txt  bank_card.c
source/cmake/toolchain/: gcc.cmake
source/crc/: crc24.c
source/include/: alumy.h
source/include/alumy/: crc.h  errno.h  list.h  network.h  qrcode.h  time.h  tlv.h  version.h.in
source/include/alumy/sys/: sysinfo.h
source/mem/: mem.c
source/network/: CMakeLists.txt
source/osal/linux/: log.c
source/osal/linux/network/: ipv4.c  resolv.c  tcp.c
source/osal/linux/network/ftp/: ftp.c  ftpget.c
source/osal/linux/sys/: grp.c
source/pclint/: options.lnt
source/se/: alumy.vpj  alumy.vpw  alumy.vpwhist  alumy.vtg
source/string/: strerror.c
source/test/: bank_card.c  bcd.c  filter.c  mem.c  network.c  string.c  sysinfo.c  test.c  test.h
test/: CMakeLists.txt  bcd.c  ftp.c  mem.c  process.c  rbtree.c  string.c  test.c  test.h  version.c
test/portal/: bsp.c
time/: tick.c
tools/: pre_push.sh
